# id-generator

./: test.zsh
src/cxx/: CMakeLists.txt  test.cpp
src/cxx/include/: idgen.hpp
